# SegCraft-Semantic-Segmentation

./: .gitignore  CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
configs/: base.yaml  local.example.yaml
configs/presets/: binary_quickstart.yaml  cityscapes_quality_video.yaml  cityscapes_video.yaml  fast_dev.yaml  pascal_fast_video.yaml  pascal_quality_video.yaml  quality.yaml
notebooks/: 01_quickstart.ipynb  02_config_and_api.ipynb  03_web_app.ipynb
src/segcraft/: __init__.py  api.py  runtime.py  training.py  video.py  webapp.py
src/segcraft/cli/: __init__.py  main.py
src/segcraft/config/: __init__.py  loader.py  schema.py
src/segcraft/data/: __init__.py  dataset.py  discovery.py
src/segcraft/engine/: __init__.py  workflows.py
src/segcraft/metrics/: __init__.py  segmentation.py
src/segcraft/models/: __init__.py  registry.py
src/segcraft/prediction/: __init__.py  predictor.py
src/segcraft/templates/: __init__.py  base.yaml
src/segcraft/templates/presets/: __init__.py  ade20k_quality_video.yaml  ade20k_video.yaml  cityscapes_video.yaml  cpu_video_demo.yaml  pascal_video.yaml  smp_unet_resnet34.yaml
tests/: test_cli.py  test_config_types.py  test_data_discovery.py  test_merge.py  test_models.py  test_prediction_real.py  test_runtime.py  test_schema.py  test_video_import.py  test_webapp.py  test_workflows.py
