[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segcraft"
version = "0.1.0"
description = "Config-driven semantic segmentation framework"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [{ name = "iodriller" }]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
torch = [
  "numpy>=1.24",
  "pillow>=10.0",
  "torch>=2.2",
  "torchvision>=0.17",
]
smp = [
  "segmentation-models-pytorch>=0.3.3",
]
transformers = [
  "transformers>=4.40",
]
video = [
  "opencv-python>=4.8",
  "yt-dlp>=2024.1",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
segcraft = "segcraft.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
