[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segcraft"
version = "0.1.0"
description = "Config-driven semantic segmentation framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [{ name = "iodriller" }]
keywords = ["semantic-segmentation", "computer-vision", "pytorch", "video", "segmentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/iodriller/SegCraft-Semantic-Segmentation"
Repository = "https://github.com/iodriller/SegCraft-Semantic-Segmentation"
Issues = "https://github.com/iodriller/SegCraft-Semantic-Segmentation/issues"
Changelog = "https://github.com/iodriller/SegCraft-Semantic-Segmentation/blob/master/CHANGELOG.md"

[project.optional-dependencies]
torch = [
  "numpy>=1.24",
  "pillow>=10.0",
  "torch>=2.2",
  "torchvision>=0.17",
]
smp = [
  "segmentation-models-pytorch>=0.3.3",
]
transformers = [
  "transformers>=4.40",
]
video = [
  "opencv-python>=4.8",
  "yt-dlp>=2024.1",
]
app = [
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
]

[project.scripts]
segcraft = "segcraft.cli.main:main"
segcraft-web = "segcraft.webapp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"segcraft.templates" = ["*.yaml"]
