[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segcraft"
version = "0.1.3"
description = "Config-driven semantic segmentation framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [{ name = "iodriller" }]
keywords = ["semantic-segmentation", "computer-vision", "pytorch", "video", "segmentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/iodriller/SegCraft-Semantic-Segmentation"
Repository = "https://github.com/iodriller/SegCraft-Semantic-Segmentation"
Issues = "https://github.com/iodriller/SegCraft-Semantic-Segmentation/issues"
Changelog = "https://github.com/iodriller/SegCraft-Semantic-Segmentation/blob/master/CHANGELOG.md"

[project.optional-dependencies]
torch = [
  "numpy>=1.26,<2.0",
  "pillow>=10.0,<11",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
]
smp = [
  "segmentation-models-pytorch>=0.3.3,<0.5",
]
transformers = [
  "transformers>=4.40,<5",
]
video = [
  "opencv-python>=4.8,<5",
  "yt-dlp>=2024.1",
]
app = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.9,<0.1",
  "uvicorn[standard]>=0.30,<1",
]
web = [
  "numpy>=1.26,<2.0",
  "pillow>=10.0,<11",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "transformers>=4.40,<5",
  "opencv-python>=4.8,<5",
  "yt-dlp>=2024.1",
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.9,<0.1",
  "uvicorn[standard]>=0.30,<1",
]
dev = [
  "pytest>=8.2,<9",
  "build>=1.2,<2",
  "twine>=5.0,<7",
  "packaging>=23.2,<25",
  "docutils>=0.18.1,<0.22",
  "rich>=13,<14",
]

[project.scripts]
segcraft = "segcraft.cli.main:main"
segcraft-web = "segcraft.webapp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"segcraft.templates" = ["*.yaml"]
"segcraft.templates.presets" = ["*.yaml"]
